<resources>
    <string name="app_name">Ghostly Profiles</string>

    <string name="create_user">Create User</string>
    <string name="home">Home</string>
    <string name="saved_users">Saved Users</string>
    <string name="password_generator">Password Generator</string>
    <string name="settings">Settings</string>
    <string name="users">Users</string>
    <string name="user_generate">User Generate</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nationality">Nationality</string>
    <string name="fields">Fields</string>
    <string name="location">Location</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="registered">Registered</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone">Phone</string>
    <string name="cell">Cell</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="picture">Picture</string>
    <string name="all">All</string>
    <string name="male_female">Male/Female</string>
    <string name="password">Password</string>
    <string name="upper_case">Upper Case</string>
    <string name="lower_case">Lower Case</string>
    <string name="numeric">Numeric</string>
    <string name="special"><![CDATA[Special (!#$%\'()*+,- ./:;<=>?@[]^_`{|}~)]]></string>
    <string name="generate">Generate</string>
    <string name="password_length">Password length</string>
    <string name="save_password">Save Password</string>
    <string name="user_details">User Details</string>
    <string name="personal">Personal</string>
    <string name="full_name">Fullname</string>
    <string name="firstname">Firstname</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="contact">Contact</string>
    <string name="username">Username</string>
    <string name="country">Country</string>
    <string name="region">Region</string>
    <string name="postal_code">Postal Code</string>
    <string name="street_address">Street Address</string>
    <string name="latitude_longitude">Latitude / Longitude</string>
    <string name="time_zone">Time Zone</string>
    <string name="please_check_your_internet_connection">Please check your internet connection.</string>
    <string name="choose_fields">Choose Fields</string>
    <string name="regenerate_password">Regenerate Password</string>
    <string name="my_password">My password</string>
    <string name="saved_passwords">Saved Passwords</string>
    <string name="please_enter_the_password_name">* Please enter the password name</string>
</resources>