<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_color_grey"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_generate"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_save_user"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end|center"
            android:src="@drawable/ic_check_n"
            app:tint="@color/white" />

    </FrameLayout>

    <View
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/gradient_color_blue" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_color_grey"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/gender"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/fl_genders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:src="@drawable/ic_male" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:src="@drawable/ic_female" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:src="@drawable/ic_both_gender" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group_genders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <RadioButton
            android:id="@+id/rb_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male_female" />


    </RadioGroup>

    <View
        android:id="@+id/view_nationality"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/gradient_color_blue" />

    <TextView
        android:id="@+id/tv_nationality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_color_grey"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/nationality"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_all_nationalities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/all"
        android:textStyle="bold"
        app:switchPadding="5dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_nationalities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="4" />

</LinearLayout>