<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_wold_map">

    <FrameLayout
        android:id="@+id/fl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_generator"
            android:textColor="@color/light_brown"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_saved_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:src="@drawable/ic_storage_24dp"
            app:tint="@color/light_brown" />

    </FrameLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_title" />

    <LinearLayout
        android:layout_width="0dp"
        android:id="@+id/ll_password_generated"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_title">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_password_generated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:text="Password : dfldfSDFAsdf23sdaf"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/et_my_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:backgroundTint="@color/white"
            android:hint="@string/my_password"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/tv_password_name"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_marginStart="24dp"
            android:text="@string/please_enter_the_password_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:backgroundTint="@color/white"
            android:text="@string/save_password"
            android:textColor="@color/green"
            app:icon="@drawable/ic_save"
            app:iconTint="@color/green" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_regenerate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:backgroundTint="@color/white"
            android:text="@string/regenerate_password"
            android:textColor="@color/green"
            app:icon="@drawable/ic_key"
            app:iconTint="@color/green" />

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/light_green"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/ll_password_options"
        app:layout_constraintStart_toStartOf="@id/ll_password_options"
        app:layout_constraintTop_toTopOf="@id/ll_password_options" />

    <LinearLayout
        android:id="@+id/ll_password_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_title">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_green" />

        <CheckBox
            android:id="@+id/cb_upper_case"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/upper_case" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_green" />

        <CheckBox
            android:id="@+id/cb_lower_case"
            android:layout_width="wrap_content"
            android:layout_margin="12dp"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/lower_case" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/gradient_color_green" />

        <CheckBox
            android:id="@+id/cb_numeric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/numeric" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/brown" />

        <CheckBox
            android:id="@+id/cb_special"
            android:layout_width="wrap_content"
            android:layout_margin="12dp"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/special" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/brown" />

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:background="@color/brown"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/ll_password_options"
        app:layout_constraintEnd_toEndOf="@id/ll_password_options"
        app:layout_constraintTop_toTopOf="@id/ll_password_options" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="12dp"
        android:background="@color/light_brown"
        app:layout_constraintBottom_toBottomOf="@id/tv_password_length"
        app:layout_constraintEnd_toStartOf="@id/tv_password_length"
        app:layout_constraintStart_toStartOf="@id/ll_password_options"
        app:layout_constraintTop_toTopOf="@id/tv_password_length" />

    <TextView
        android:id="@+id/tv_password_length"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/password_length"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_password_options" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="12dp"
        android:background="@color/light_brown"
        app:layout_constraintBottom_toBottomOf="@id/tv_password_length"
        app:layout_constraintEnd_toEndOf="@id/ll_password_options"
        app:layout_constraintStart_toEndOf="@id/tv_password_length"
        app:layout_constraintTop_toTopOf="@id/tv_password_length" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_password_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:stepSize="1"
        android:valueFrom="4"
        android:valueTo="30"
        app:labelBehavior="withinBounds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password_length"
        app:thumbColor="@color/white"
        app:trackColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:id="@+id/btn_generate"
        android:layout_margin="24dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/green"
        app:icon="@drawable/ic_key"
        app:iconGravity="textStart"
        app:iconTint="@color/green"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider_password_length"
        android:text="@string/generate" />

</androidx.constraintlayout.widget.ConstraintLayout>