<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/country"
            android:textColor="@color/beige"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="Turkey"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_copy" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/brown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/region"
            android:textColor="@color/beige"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="Ankara"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_copy" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/brown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/postal_code"
            android:textColor="@color/beige"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_postal_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="06900"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_copy" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/brown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/street_address"
            android:textColor="@color/beige"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_street_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="Şehitler cad. 32123"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_copy" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/brown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/latitude_longitude"
            android:textColor="@color/beige"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_latitude_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="43.7729 / 43.7729"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_copy" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/brown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/time_zone"
            android:textColor="@color/beige"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_time_zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="-8:00 Pacific Time (US and Canada)"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_copy" />

    </LinearLayout>

</ScrollView>