<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/gradient_color_grey" />

    <TextView
        android:id="@+id/tv_personal_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_color_grey"
        android:padding="12dp"
        android:text="@string/personal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="@drawable/gradient_color_grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_color_beige"
                android:padding="8dp"
                android:text="@string/full_name"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="@drawable/gradient_color_brown" />

            <TextView
                android:id="@+id/tv_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_color_green"
                android:padding="12dp"
                android:text="Mr Rory Van Laerhoven"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_color_beige"
                android:padding="8dp"
                android:text="@string/firstname"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="@drawable/gradient_color_brown" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_color_green"
                android:padding="12dp"
                android:text="Rory"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_color_beige"
                android:padding="8dp"
                android:text="@string/surname"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="@drawable/gradient_color_brown" />

            <TextView
                android:id="@+id/tv_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_color_green"
                android:padding="12dp"
                android:text="Laerhoven"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_color_beige"
                android:padding="8dp"
                android:text="@string/age"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="@drawable/gradient_color_brown" />

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_color_green"
                android:padding="12dp"
                android:text="30"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_color_beige"
                android:padding="8dp"
                android:text="@string/date_of_birth"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="@drawable/gradient_color_brown" />

            <TextView
                android:id="@+id/tv_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_color_green"
                android:padding="12dp"
                android:text="14/09/1998"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_color_beige"
                android:padding="8dp"
                android:text="@string/gender"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="@drawable/gradient_color_brown" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_color_green"
                android:padding="12dp"
                android:text="Male"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_color_beige"
                android:padding="8dp"
                android:text="@string/nationality"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="@drawable/gradient_color_brown" />

            <TextView
                android:id="@+id/tv_nationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_color_green"
                android:padding="12dp"
                android:text="Turkey"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>